@@ -44,6 +44,7 @@ HTTP_REQUEST_URI_TOO_LARGE = 414
 HTTP_UNSUPPORTED_MEDIA_TYPE = 415
 HTTP_RANGE_NOT_SATISFIABLE = 416
 HTTP_EXPECTATION_FAILED = 417
+HTTP_I_AM_A_TEAPOT = 418
 HTTP_UNPROCESSABLE_ENTITY = 422
 HTTP_LOCKED = 423
 HTTP_FAILED_DEPENDENCY = 424
